v4.3.1/_sources/generated/pcdsdevices.device_types.IMS.rst.txt
pcdsdevices.device\_types.IMS
=============================

.. currentmodule:: pcdsdevices.device_types

.. autoclass:: IMS

   
   
    .. list-table:: Ophyd Device Components
       :header-rows: 1
       :widths: auto

       *  - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
   
       *  -  user_readback
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.RBV``
          -  
          -  hinted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  user_setpoint
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.VAL``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  user_offset
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.OFF``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  user_offset_dir
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.DIR``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  offset_freeze_switch
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.FOFF``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  set_use_switch
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.SET``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  velocity
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.VELO``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  acceleration
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.ACCL``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  motor_egu
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.EGU``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  motor_is_moving
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.MOVN``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  motor_done_move
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.DMOV``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  high_limit_switch
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.HLS``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  low_limit_switch
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.LLS``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  high_limit_travel
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.HLM``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  low_limit_travel
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.LLM``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  direction_of_travel
          -  :class:`~ophyd.signal.Signal`
          -  
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  motor_stop
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.STOP``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  home_forward
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.HOMF``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  home_reverse
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.HOMR``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  disabled
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.DISP``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  description
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.DESC``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  dial_position
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.DRBV``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  motor_spg
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.SPG``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  reinit_command
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.RINI``
          -  
          -  omitted
          -  
   
       *  -  bit_status
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.MSTA``
          -  
          -  omitted
          -  
   
       *  -  seq_seln
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``:SEQ_SELN``
          -  
          -  omitted
          -  
   
       *  -  error_severity
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.SEVR``
          -  
          -  omitted
          -  
   
       *  -  part_number
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.PN``
          -  
          -  omitted
          -  
   
       *  -  velocity_base
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.VBAS``
          -  
          -  omitted
          -  
   
       *  -  velocity_max
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.VMAX``
          -  
          -  config
          -  
   

   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   

   
   


    
    
    .. rubric:: Methods

    .. autosummary::
       :toctree: generated
    
       ~IMS.auto_setup
       ~IMS.camonitor
       ~IMS.check_limit_switches
       ~IMS.clear_all_flags
       ~IMS.clear_error
       ~IMS.clear_limits
       ~IMS.clear_powerup
       ~IMS.clear_stall
       ~IMS.configure
       ~IMS.describe
       ~IMS.disable
       ~IMS.enable
       ~IMS.end_monitor_thread
       ~IMS.get
       ~IMS.get_high_limit
       ~IMS.get_lim
       ~IMS.get_low_limit
       ~IMS.home
       ~IMS.move
       ~IMS.mv
       ~IMS.mv_ginput
       ~IMS.mvr
       ~IMS.read
       ~IMS.read_configuration
       ~IMS.reinitialize
       ~IMS.screen
       ~IMS.set
       ~IMS.set_current_position
       ~IMS.set_high_limit
       ~IMS.set_lim
       ~IMS.set_low_limit
       ~IMS.set_position
       ~IMS.spg_go
       ~IMS.spg_pause
       ~IMS.spg_stop
       ~IMS.stop
       ~IMS.summary
       ~IMS.trigger
       ~IMS.tweak
       ~IMS.umv
       ~IMS.umvr
       ~IMS.wait
       ~IMS.wm
       ~IMS.wm_update
    
    

    
    
    .. rubric:: Attributes

    .. autosummary::
    
       ~IMS.configuration_attrs
       ~IMS.connected
       ~IMS.egu
       ~IMS.high_limit
       ~IMS.hints
       ~IMS.kind
       ~IMS.limits
       ~IMS.low_limit
       ~IMS.moving
       ~IMS.position
       ~IMS.precision
       ~IMS.presets
       ~IMS.settle_time
       ~IMS.timeout
       ~IMS.tolerated_alarm
    
    